# hadoop-snappy

./: NOTICE.txt  README  README.txt  build.xml  pom.xml
maven/: build-assemblynative.xml  build-compilenative.xml
src/java/com/hadoop/compression/snappy/: SnappyCodec.java  SnappyCompressor.java  SnappyDecompressor.java  SnappyNativeCodeLoader.java
src/java/org/apache/hadoop/io/compress/: SnappyCodec.java
src/java/org/apache/hadoop/io/compress/snappy/: SnappyCompressor.java  SnappyDecompressor.java  SnappyNativeCodeLoader.java
src/main/assemblies/: hadoop-snappy.xml
src/main/java/org/apache/hadoop/io/compress/: SnappyCodec.java
src/main/java/org/apache/hadoop/io/compress/snappy/: LoadSnappy.java  SnappyCompressor.java  SnappyDecompressor.java
src/main/native/: Makefile.am  Makefile.in  configure  configure.ac
src/main/native/autom4te.cache/: output.0  requests
src/main/native/src/: SnappyCompressor.cc  SnappyDecompressor.cc  hadoop_snappy.h  org_apache_hadoop_io_compress_snappy_SnappyCompressor.h  org_apache_hadoop_io_compress_snappy_SnappyDecompressor.h
src/main/native/src/org/apache/hadoop/io/compress/snappy/: SnappyCompressor.c  SnappyDecompressor.c
src/native/: Makefile.am  config.h.in  configure.ac
src/native/autom4te.cache/: output.1  traces.0  traces.1
src/native/src/: SnappyCompressor.cc  SnappyDecompressor.cc  com_hadoop_compression_snappy_SnappyCompressor.h  com_hadoop_compression_snappy_SnappyDecompressor.h  hadoop_snappy.h  org_apache_hadoop_io_compress_snappy_SnappyCompressor.h  org_apache_hadoop_io_compress_snappy_SnappyDecompressor.h
src/test/com/hadoop/compression/snappy/: TestSnappyCodec.java
src/test/java/org/apache/hadoop/io/compress/snappy/: TestSnappyCodec.java
src/test/org/apache/hadoop/io/compress/snappy/: TestSnappyCodec.java
